<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.beststore.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.beststore.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.beststore.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_cateogory" />
    <fragment
        android:id="@+id/nav_offer"
        android:name="com.example.beststore.OfferFragment"
        android:label="@string/offers"
        tools:layout="@layout/fragment_offer" />
    <fragment
        android:id="@+id/nav_new_products"
        android:name="com.example.beststore.NewProductFragment"
        android:label="@string/newproduct"
        tools:layout="@layout/fragment_new_product" />
    <fragment
        android:id="@+id/nav_my_orders"
        android:name="com.example.beststore.MyOrderFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_my_order" />
    <fragment
        android:id="@+id/nav_my_carts"
        android:name="com.example.beststore.MyCartFragment"
        android:label="@string/carts"
        tools:layout="@layout/fragment_my_cart" />
</navigation>